<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Soil Color</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_sample">NewSampleActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="image_source">Image source</string>
    <string name="image_source_camera">Camera</string>
    <string name="image_source_preview">Preview</string>
    <string name="image_source_preview_builtin">Preview (builtin)</string>
    <string name="image_source_preview_manual">Preview (manual)</string>
    <string name="neutral_balance">Neutral balance</string>
    <string name="neutral_balance_deltas">Deltas</string>
    <string name="neutral_balance_coefs">Coefficients</string>
    <string name="calibration_card">Calibration card</string>
    <string name="calibration_card_whibal">WhiBal</string>
    <string name="calibration_card_generic18">Generic 18%</string>
    <string name="processing_image">Processing sample...</string>
    <string name="focus_failure">Could not obtain focus. Try moving camera back.</string>
    <string name="bad_lighting_message">Inconsistent lighting. Make sure there are no shadows in the image. Try moving camera back.  </string>
    
</resources>